put changes from conference into conf

--- a/liquid/templates/conf/job-fair-invite.html
+++ b/liquid/templates/conf/job-fair-invite.html
@@ -1,4 +1,4 @@
-{% extends "conf/base.html" %}
+{% extends "conference/base.html" %}
 {% load bootstrap %}
 {% block content %}
 <div class="row">
@@ -6,22 +6,22 @@
 	<div id="job-fair-form">
         <img class="header-logo" src="/static/img/conference/header-logo.png" />
         {% if company.type == JOBFAIR %}
-            <a name="form1570856351" id="formAnchor1570856351"></a>
-            <script type="text/javascript" src="http://fs6.formsite.com/include/form/embedManager.js?1570856351"></script>
+            <a name="form1425697234" id="formAnchor1425697234"></a>
+            <script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?1425697234"></script>
             <script type="text/javascript">
                 EmbedManager.embed({
-                    key: "http://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGghGOwQgdGLHi&1570856351",
-                    width: "100%"
-                });
+                        key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgpg9prkW0nJ8&1425697234",
+                        width: "100%"
+                    });
             </script>
         {% elif company.type == STARTUP %}
-            <a name="form1613832842" id="formAnchor1613832842"></a>
-            <script type="text/javascript" src="http://fs6.formsite.com/include/form/embedManager.js?1613832842"></script>
+            <a name="form1120212271" id="formAnchor1120212271"></a>
+            <script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?1120212271"></script>
             <script type="text/javascript">
                 EmbedManager.embed({
-                    key: "http://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGghjGupL6arfd&1613832842",
-                    width: "100%"
-                });
+                        key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgrMF5Xx2%2B6uD&1120212271",
+                        width: "100%"
+                    });
             </script>
         {% endif %}
     </div>
