--- a/liquid/templates/conf/landing.html
+++ b/liquid/templates/conf/landing.html
@@ -1,4 +1,4 @@
-{% extends "conf/base.html" %}
+{% extends "conference/base.html" %}
 {% block top_styles %}
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 {% endblock %}
@@ -11,11 +11,11 @@
 	  <div class="row">
 		<div class="span12">
 		  <div id="save-the-date">
-			<h2>September 25 - 28, 2014</h2>
+			<h2>October 1 - 4, 2015</h2>
               <hr />
 			<p>Reflections | Projections, the annual computing conference at the 
 			  <a href="http://illinois.edu">University of Illinois Urbana-Champaign,</a> 
-			  will be returning this September! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair or, if you are more interested in the startup world, our Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition! </p>
+			  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair or, if you are more interested in the startup world, our Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition! </p>
               <br />
               <p>Interested in attending? The conference is free and open to all, but please
                   pre-register to receive a free t-shirt!</p>
@@ -31,23 +31,24 @@
               <hr />
               <div id="event-dates">
 		  <div class="span3 event-day">
-			<h3>Thursday, October 10</h3>
+			<h3>Thursday, October 1</h3>
 			<li>Startup Fair</li>
 		  </div>
 		  <div class="span3 event-day">
-			<h3>Friday, October 11</h3>
+			<h3>Friday, October 2</h3>
 			<li>Speaker Talks</li>
 			<li>Job Fair</li>
 			<li>Mechmania Opening Ceremony</li>
 		  </div>
 		  <div class="span3 event-day">
-			<h3>Saturday, October 12</h3>
+			<h3>Saturday, October 3</h3>
 			<li>Speaker Talks</li>
 			<li>PuzzleBang Finishes</li>
 		  </div>
 		  <div class="span3 event-day">
-			<h3>Sunday, October 13</h3>
-			<li>Mechmania Closing Ceremony</li>
+			<h3>Sunday, October 4</h3>
+            <li>Mechmania Closing Ceremony</li>
+            <li>Birds of a Feather</li>
           </div>
               </div>
           </div>
@@ -57,7 +58,7 @@
           <div class="span12">
 		  <form class="form-inline well email-subscribe" method="get" action="/conference/subscribe/">
 			<div class="message"></div>
-			<label for="subscribe">Subscribe to recieve updates!  </label> 
+			<label for="subscribe">Subscribe to receive updates!  </label> 
 			<div class="input-fields">
 			  <input id="subscribe" type="text" class="input-large" placeholder="email address" name="email">
 			  <button type="submit" class="btn">Subscribe</button>
