--- a/liquid/templates/conf/landing.html
+++ b/liquid/templates/conf/landing.html
@@ -1,4 +1,4 @@
-{% extends "conference/base.html" %}
+{% extends "conf/base.html" %}
 {% block top_styles %}
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 {% endblock %}
