Update cover photos, TODO use newer RP photo

--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -6,24 +6,24 @@
          <!-- Carousel items -->
          <div class="carousel-inner">
             <div class="item active">
-               <img src="static/img/cover/acm.jpg" alt="">
+               <img src="static/img/cover/picnic.jpg" alt="Our Fall 2015 picnic">
                <div class="carousel-caption">
                   <h4>Welcome to ACM@UIUC</h4>
                   <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers.</p>
                </div>
             </div>
             <div class="item">
-               <img src="static/img/cover/tachi.jpg" alt="">
+               <img src="static/img/cover/rp.jpg" alt="Reflections|Projections 2015">
                <div class="carousel-caption">
-                  <h4>Tacchi at Engineering Open House</h4>
-                  <p>This award wining touch table has been a sight to see in Siebel at the past several Open Houses.</p>
+                  <h4>Reflections | Projections</h4>
+                  <p>One of the largest student tech conferences in the midwest, Reflections|Projections is an annual event that includes a job fair and programming competition.</p>
                </div>
             </div>
             <div class="item">
-               <img src="static/img/cover/fun.jpg" alt="">
+               <img src="static/img/cover/open-house.jpg" alt="ACM Open House 2015">
                <div class="carousel-caption">
-                  <h4>Go Fly a Kite</h4>
-                  <p>On a sunny Friday afternoon sometime we venture out of the walls of Siebel.</p>
+                  <h4>ACM Open House</h4>
+                  <p>Held at the beginning of Spring and Fall semesters, this is a great opportunity to learn more about ACM and its various Special Interest Groups (SIGs).</p>
                </div>
             </div>
        </div>
