initial rp 2016 changes

--- a/liquid/templates/sigs/details.html
+++ b/liquid/templates/sigs/details.html
@@ -3,7 +3,7 @@
 <header class="page-header">
 <h1>{{s.name}}</h1>
 </header>
-<p><img src="{{s.logo}}" align="right" style="max-width:400px">{{s.description}}</p>
+<p><img src="{{s.logo}}" align="right">{{s.description}}</p>
 <p>Chairs: {{s.chairs}}</p>
 <p>Email: <a href="mailto:{{s.mailing_list.email}}">{{s.mailing_list.email}}</a></p>
 <p>
