--- a/liquid/templates/intranet/caffeine_manager/trays/trays.html
+++ b/liquid/templates/intranet/caffeine_manager/trays/trays.html
@@ -14,8 +14,8 @@
         {% if is_caffeine_admin %}
             <th>Enabled</th>
             <th>Detect Override</th>
-            <th>Actions</th>
         {% endif %}
+        <th>Actions</th>
     </tr>
 
     {% for t in trays %}
@@ -31,8 +31,13 @@
                 <a class="btn btn-small btn-primary" href='{% url cm_trays_edit t.id %}'>Edit Tray</a>
                 {% if t.soda %}
                     <a class="btn btn-small" href='{% url cm_soda_edit t.soda.id %}'>Edit Soda</a>
+                    <a class="btn btn-small btn-success" href='{% url cm_trays_buy_vend t.id %}'>Vend</a>
                     <a class="btn btn-small btn-danger" href='{% url cm_trays_forcevend t.id %}'>Force Vend</a>
                 {% endif %}
+            </td>
+        {% else %}
+            <td>
+                <a class="btn btn-small btn-success" href='{% url cm_trays_buy_vend t.id %}'>Vend</a>
             </td>
         {% endif %}
     </tr>
