--- a/liquid/templates/conf/job-fair-invite.html
+++ b/liquid/templates/conf/job-fair-invite.html
@@ -6,23 +6,23 @@
 	<div id="job-fair-form">
         <img class="header-logo" src="/static/img/conference/header-logo.png" />
         {% if company.type == JOBFAIR %}
-            <a name="form1425697234" id="formAnchor1425697234"></a>
-            <script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?1425697234"></script>
-            <script type="text/javascript">
-                EmbedManager.embed({
-                        key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgpg9prkW0nJ8&1425697234",
-                        width: "100%"
-                    });
-            </script>
+            <a name="form2010039984" id="formAnchor2010039984"></a>
+		<script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?2010039984"></script>
+		<script type="text/javascript">
+		EmbedManager.embed({
+			key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgmVMeY%2BFb%2BPC&2010039984",
+			width: "100%"
+		});
+		</script>
         {% elif company.type == STARTUP %}
-            <a name="form1120212271" id="formAnchor1120212271"></a>
-            <script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?1120212271"></script>
-            <script type="text/javascript">
-                EmbedManager.embed({
-                        key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgrMF5Xx2%2B6uD&1120212271",
-                        width: "100%"
-                    });
-            </script>
+            <a name="form1841086995" id="formAnchor1841086995"></a>
+		<script type="text/javascript" src="https://fs6.formsite.com/include/form/embedManager.js?1841086995"></script>
+		<script type="text/javascript">
+		EmbedManager.embed({
+			key: "https://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgk%2BWGKjbDCpi&1841086995",
+			width: "100%"
+		});
+		</script>
         {% endif %}
     </div>
   </div>
