--- a/liquid/templates/intranet/jobfair_manager/companies.html
+++ b/liquid/templates/intranet/jobfair_manager/companies.html
@@ -22,8 +22,8 @@
     <a href="/intranet/jobfair_manager/companies?filter=startup">Startup Fair</a>
   </li>
   <li {% if request.GET.filter == "15" %}class="active"{% endif %}>
- +    <a href="/intranet/jobfair_manager/companies?filter=15">2015 Companies</a>
- +  </li>
+    <a href="/intranet/jobfair_manager/companies?filter=15">2015 Companies</a>
+  </li>
   <li {% if request.GET.filter == "14" %}class="active"{% endif %}>
     <a href="/intranet/jobfair_manager/companies?filter=14">2014 Companies</a>
   </li>
