--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -7,22 +7,22 @@
   <div class="span6">
     <h2>Contacts</h2>
     <p><strong>Chair</strong><br>
-        Sujay Khandekar<br>
+        Naren Sivagnanadasan<br>
         <a href="mailto:acm@illinois.edu">acm@illinois.edu</a>
     </p>
     
     <p><strong>Vice Chair</strong><br>
-        Laura Licari<br>
+        Sathvika Ashokkumar<br>
        <a href="mailto:vice-chair@acm.illinois.edu">vice-chair@acm.illinois.edu</a>
     </p>
     
     <p><strong>Treasurer</strong><br>
-       Sebastian Conybeare<br>
+       Thomas Yu<br>
        <a href="mailto:treasurer@acm.illinois.edu">treasurer@acm.illinois.edu</a>
     </p>
     
     <p><strong>Secretary</strong><br>
-       Connie Fan<br>
+       Alec Kochevar-Cureton<br>
        <a href="mailto:secretary@acm.illinois.edu">secretary@acm.illinois.edu</a>
     </p>
     
@@ -31,13 +31,8 @@
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Zach Miller,
-        Amanda Sopkin, 
-        Mike Parilla,
-        Aashna Makkar,
-        David Zmick,
-        Karunya Tota,
-        Harshit Kumar <br>
+        Amanda Sopkin,
+        Sujay Khandekar<br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
 
@@ -47,15 +42,9 @@
      </p>
      
      <p><strong>Social Chair</strong><br>
-        Laura Licari<br>
+        Sathvika Ashokkumar<br>
         <a href="mailto:social@acm.illinois.edu">social@acm.illinois.edu</a>
      </p>
-     
-     <p><strong>Banks Editor</strong><br>
-        Connie Fan<br>
-        <a href="mailto:boneyard@acm.illinois.edu">boneyard@acm.illinois.edu</a>
-      </p>
-
   </div>
   <div class="span6">
     <h2>Address</h2>
