Edited the Reflections Projections page
http://reflectionsprojections.com is the new site

--- a/liquid/templates/conf/main.html
+++ b/liquid/templates/conf/main.html
@@ -12,7 +12,7 @@
 <p>
   ACM could not host Reflections | Projections without the generous support of our sponsors. Their donations fund all the events and help keep student fees low.
 </p>
-<p>For more information, please visit the website: <a href="/conference">http://www.acm.uiuc.edu/conference</a>.
+<p>For more information, please visit the website: <a href="http://reflectionsprojections.com">http://reflectionsprojections.com</a>.
 </p>
 <br />
 <p align="center">
