--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -27,22 +27,22 @@
     </p>
     
     <p><strong>System Administrators</strong><br>
+        Eric Ahn<br>
        <a href="mailto:admin@acm.illinois.edu">admin@acm.illinois.edu</a>
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Amanda Sopkin,
-        Sujay Khandekar<br>
+        Amanda Sopkin, Tyler Kim<br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
 
      <p><strong>Projects Chair</strong><br>
-        Kevin Wang, Milan Dasgupta<br>
+        Kevin Wang<br>
         <a href="mailto:projects@acm.illinois.edu">projects@acm.illinois.edu</a>
      </p>
      
      <p><strong>Social Chair</strong><br>
-        Sathvika Ashokkumar<br>
+        Margie Chubin<br>
         <a href="mailto:social@acm.illinois.edu">social@acm.illinois.edu</a>
      </p>
   </div>
